# solana-idl

./: Cargo.toml  Makefile  README.md  rustfmt-nightly.toml
.github/actions/setup-build-env/: action.yml
.github/workflows/: ci-clippy.yml  ci-fmt.yml  ci-test.yml
classic/: Cargo.toml  README.md
classic/src/: idl.rs  idl_field.rs  idl_instruction.rs  idl_type_definition.rs
converter/: Cargo.toml  README.md
converter/src/: errors.rs  lib.rs
converter/src/anchor_to_classic/: idl_const.rs  idl_defined_fields.rs  idl_error_code.rs  idl_event.rs  idl_field.rs  idl_instruction.rs  idl_metadata.rs  idl_type.rs  idl_type_definition.rs  idl_variant.rs  mod.rs
converter/tests/: convert_to_classic.rs
converter/tests/fixtures/: anchor_counter.converted.json  anchor_counter.json  world.converted.json  world.json
idl/: Cargo.toml  README.md
idl/src/: errors.rs  lib.rs
idl/tests/: extract_classic_idl.rs
src/: idl.rs  idl_error_code.rs  idl_field.rs  idl_instruction.rs  idl_metadata.rs  idl_type.rs  idl_type_definition.rs  idl_variant.rs  lib.rs
