[workspace]
members = ["classic"]
resolver = "2"

[workspace.package]
version = "0.0.4"
edition = "2021"
license = "MIT"
description = "Rust Solana IDL types definitions de/serializable with serde."
authors = ["Thorsten Lorenz <thlorenz@gmx.de>"]
homepage = "https://github.com/thlorenz/solana-idl"
repository = "https://github.com/thlorenz/solana-idl"

[workspace.dependencies]
serde = { version = "1.0.130", features = ["derive"] }
solana-idl-classic = { path = "classic" }
