[workspace]
members = ["classic", "converter", "idl"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Thorsten Lorenz <thlorenz@gmx.de>"]
homepage = "https://github.com/thlorenz/solana-idl"
repository = "https://github.com/thlorenz/solana-idl"

[workspace.dependencies]
anchor-lang-idl = "0.1.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.117"
solana-idl-classic = { path = "classic", version = "0.2.0" }
solana-idl-converter = { path = "converter", version = "0.2.0" }
thiserror = "1.0.61"
