[package]
name = "solana-idl-classic"
description = "Rust Solana Classic IDL types definitions de/serializable with serde."
version= "0.2.0"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
