[package]
name = "solana-idl-converter"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anchor-lang-idl = { workspace = true }
solana-idl-classic = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
