[package]
name = "solana-idl-converter"
description = "Converts Rust Solana Classic IDL types definitions de/serializable with serde from various IDL formats."
version= "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anchor-lang-idl = { workspace = true }
solana-idl-classic = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
