[package]
name = "solana-idl"
description = "Rust Solana Classic IDL types definitions de/serializable with serde and converter."
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anchor-lang-idl = { workspace = true }
serde_json = { workspace = true }
solana-idl-classic = { workspace = true }
solana-idl-converter = { workspace = true }
thiserror = { workspace = true }
